--- a/index.ipynb
+++ b/index.ipynb
@@ -44,7 +44,7 @@
     "slices_of_pie = 6\n",
     "slices_eaten = 0\n",
     "\n",
-    "\n",
+    "while sli\n",
     "# use a while loop to eat each slice of pie\n",
     "# add each slice to the slices_eaten variable"
    ]
