--- a/index.ipynb
+++ b/index.ipynb
@@ -47,6 +47,8 @@
     "while slices_of_pie > 0:\n",
     "    slices_of_pie -= 1\n",
     "    slices_eaten +=1\n",
+    "\n",
+    "slices\n",
     "# use a while loop to eat each slice of pie\n",
     "# add each slice to the slices_eaten variable"
    ]
