--- a/index.ipynb
+++ b/index.ipynb
@@ -37,9 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "slices_of_pie = 6\n",
     "slices_eaten = 0\n",
@@ -48,7 +59,7 @@
     "    slices_of_pie -= 1\n",
     "    slices_eaten +=1\n",
     "\n",
-    "slices\n",
+    "slices_eaten\n",
     "# use a while loop to eat each slice of pie\n",
     "# add each slice to the slices_eaten variable"
    ]
