Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,6 +75,7 @@
     "\n",
     "while number_of_cooked_pancakes < 5:\n",
     "    time_for_breakfast -= 54\n",
+    "    number of_\n",
     "    \n",
     "# use a while loop to make yourself 5 pancakes for breakfast\n",
     "# each pancake takes 27 seconds to cook on each side\n",
