--- a/index.ipynb
+++ b/index.ipynb
@@ -125,6 +125,9 @@
     "    if patron % 2 = 0:\n",
     "        line_of_hungry_patrons.remove(patron)\n",
     "        fed_patrons.append(patron)\n",
+    "        \n",
+    "line_of_hungry_patrons\n",
+    "fe\n",
     "# use a while loop to to feed the hungry patrons who have an even number\n",
     "# add the patrons with an even number to the fed_patrons list\n",
     "# then remove the even numbered patrons from the line_of_hungry_patrons\n",
