--- a/index.ipynb
+++ b/index.ipynb
@@ -114,20 +114,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29]\n",
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28]\n"
+     ]
+    }
+   ],
    "source": [
     "line_of_hungry_patrons = list(range(0,30))\n",
     "fed_patrons = []\n",
     "\n",
     "for patron in range(0, len(line_of_hungry_patrons)):\n",
-    "    if patron % 2 = 0:\n",
+    "    if patron % 2 == 0:\n",
     "        line_of_hungry_patrons.remove(patron)\n",
     "        fed_patrons.append(patron)\n",
     "        \n",
     "print(line_of_hungry_patrons)\n",
-    "pfed_patrons\n",
+    "print(fed_patrons)\n",
     "# use a while loop to to feed the hungry patrons who have an even number\n",
     "# add the patrons with an even number to the fed_patrons list\n",
     "# then remove the even numbered patrons from the line_of_hungry_patrons\n",
