--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,8 @@
     "first_dog_person = None\n",
     "iteration_count = 0\n",
     "for person in people:\n",
-    "    if people['pet'] == \"Dog\"\n",
+    "    if people['pet'] == \"Dog\":\n",
+    "        \n",
     "    iteration_count += 1\n",
     "    pass"
    ]
