--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,8 @@
     "iteration_count = 0\n",
     "for person in people:\n",
     "    if people['pet'] == \"Dog\":\n",
-    "        print(iteration)\n",
+    "        print(iteration_count)\n",
+    "        print\n",
     "    iteration_count += 1\n",
     "    pass"
    ]
