--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,7 @@
     "for person in people:\n",
     "    if people['pet'] == \"Dog\":\n",
     "        print(iteration_count)\n",
-    "        print\n",
+    "        print(people['name'])\n",
     "    iteration_count += 1\n",
     "    pass"
    ]
