Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,6 +187,7 @@
     "    if people['pet'] == \"Dog\":\n",
     "        print(iteration_count)\n",
     "        print(people['name'])\n",
+    "        break\n",
     "    iteration_count += 1\n",
     "    pass"
    ]
