--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,8 @@
     "for person in people:\n",
     "    if people['pet'] == \"Dog\":\n",
     "        print(iteration_count)\n",
-    "        people['name'] \n",
+    "        first_dog_person = people['name']\n",
+    "        \n",
     "        break\n",
     "    iteration_count += 1\n",
     "    pass"
