--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,7 @@
     "    if people['pet'] == \"Dog\":\n",
     "        print(iteration_count)\n",
     "        first_dog_person = people['name']\n",
-    "        \n",
+    "        print(first_dog_person)\n",
     "        break\n",
     "    iteration_count += 1\n",
     "    pass"
