--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
     "# the iteration count shouldn't exceed 2 iterations\n",
     "first_dog_person = None\n",
     "iteration_count = 0\n",
-    "for person in people:\n",
+    "for person in people.:\n",
     "    if people[person] == \"Dog\":\n",
     "        print(iteration_count)\n",
     "        first_dog_person = people['name']\n",
