--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,7 @@
     "first_dog_person = None\n",
     "iteration_count = 0\n",
     "for person in people:\n",
-    "    if people[person] == \"Dog\":\n",
+    "    if people[\"pet\"] == \"Dog\":\n",
     "        print(iteration_count)\n",
     "        first_dog_person = people['name']\n",
     "        print(first_dog_person)\n",
