--- a/index.ipynb
+++ b/index.ipynb
@@ -196,6 +196,7 @@
     "first_dog_person = None\n",
     "iteration_count = 0\n",
     "for person in people:\n",
+    "    iteration_count += 1\n",
     "    if people[\"pet\"] == \"Dog\":\n",
     "        print(iteration_count)\n",
     "        first_dog_person = people['name']\n",
