Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,11 @@
      "output_type": "stream",
      "text": [
       "2\n",
-      "Katie\n"
+      "Katie\n",
+      "5\n",
+      "Estelle\n",
+      "6\n",
+      "Gustav\n"
      ]
     }
    ],
