Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,19 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "Katie\n",
-      "5\n",
-      "Estelle\n",
-      "6\n",
-      "Gustav\n"
+      "{'name': 'Daniel', 'age': 29, 'job': 'Engineer', 'pet': 'Cat', 'pet_name': 'Gato'}\n",
+      "{'name': 'Katie', 'age': 30, 'job': 'Teacher', 'pet': 'Dog', 'pet_name': 'Frank'}\n",
+      "{'name': 'Owen', 'age': 26, 'job': 'Sales person', 'pet': 'Cat', 'pet_name': 'Cosmo'}\n",
+      "{'name': 'Josh', 'age': 22, 'job': 'Student', 'pet': 'Cat', 'pet_name': 'Chat'}\n",
+      "{'name': 'Estelle', 'age': 35, 'job': 'French Diplomat', 'pet': 'Dog', 'pet_name': 'Gabby'}\n",
+      "{'name': 'Gustav', 'age': 24, 'job': 'Brewer', 'pet': 'Dog', 'pet_name': 'Helen'}\n"
      ]
     }
    ],
@@ -197,9 +197,8 @@
     "first_dog_person = None\n",
     "iteration_count = 0\n",
     "for person in people:\n",
-    "    iteration_count += 1\n",
-    "    if person[\"pet\"] == \"Dog\":\n",
-    "        print(iteration_count)\n",
+    "    \n",
+    "        print(person)\n",
     "        \n",
     "\n",
     "\n",
