Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,19 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Daniel\n",
-      "Katie\n",
-      "Owen\n",
-      "Josh\n",
-      "Estelle\n",
-      "Gustav\n"
+      "29\n",
+      "30\n",
+      "26\n",
+      "22\n",
+      "35\n",
+      "24\n"
      ]
     }
    ],
@@ -197,7 +197,7 @@
     "first_dog_person = None\n",
     "iteration_count = 0\n",
     "for person in people:\n",
-    "        print(person['name'])\n",
+    "        print(person['age'])\n",
     "        \n",
     "\n",
     "\n",
