--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,7 @@
     "# the iteration count shouldn't exceed 2 iterations\n",
     "first_dog_person = None\n",
     "iteration_count = 0\n",
-    "for person in people:\n",
+    "for per in people:\n",
     "        print(person['age'])\n",
     "        \n",
     "\n",
