Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -196,8 +196,8 @@
     "# the iteration count shouldn't exceed 2 iterations\n",
     "first_dog_person = None\n",
     "iteration_count = 0\n",
-    "for per in people:\n",
-    "        print(person['age'])\n",
+    "for x in people:\n",
+    "        print(x['age'])\n",
     "        \n",
     "\n",
     "\n",
