Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -213,6 +213,8 @@
    "source": [
     "# use a for loop to create a list of the cat owners who are under the age of 28\n",
     "cat_owners = None\n",
+    "\n",
+    "for \n",
     "# for loop goes here"
    ]
   },
