Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,8 @@
     "# use a for loop to create a list of the cat owners who are under the age of 28\n",
     "cat_owners = None\n",
     "\n",
-    "for \n",
+    "for person in people:\n",
+    "    if perso\n",
     "# for loop goes here"
    ]
   },
