--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
     "cat_owners = None\n",
     "\n",
     "for person in people:\n",
-    "    if person['pet']\n",
+    "    if person['pet'] == cat and person ]\\\\\n",
     "# for loop goes here"
    ]
   },
