Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,8 @@
     "cat_owners = None\n",
     "\n",
     "for person in people:\n",
-    "    if person['pet'] == cat and person['age'] <= 29\n",
+    "    if person['pet'] == cat and person['age'] <= 29:\n",
+    "        \n",
     "# for loop goes here"
    ]
   },
