Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
     "\n",
     "for person in people:\n",
     "    if person['pet'] == cat and person['age'] <= 29:\n",
-    "        \n",
+    "        cat_o\n",
     "# for loop goes here"
    ]
   },
