--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
     "\n",
     "for person in people:\n",
     "    if person['pet'] == cat and person['age'] <= 29:\n",
-    "        cat_owners.append(person)\n",
+    "        cat_owners.append(person['name'])\n",
     "# for loop goes here"
    ]
   },
