Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
     "    if person['pet'] == 'cat' and person['age'] <= 29:\n",
     "        cat_owners.append(person['name'])\n",
     "        \n",
-    "cat_ow\n",
+    "print(cat_owners)\n",
     "# for loop goes here"
    ]
   },
