Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,9 +207,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# use a for loop to create a list of the cat owners who are under the age of 28\n",
     "cat_owners = None\n",
