Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
     "\n",
     "for person in people:\n",
     "    if person['pet'] == 'Cat' and person['age'] <= 29:\n",
-    "        cat_owners.append(person['name'])\n",
+    "        cat_owners.append(person['name')\n",
     "        \n",
     "print(cat_owners)\n",
     "# for loop goes here"
