--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
     "cat_owners = None\n",
     "\n",
     "for person in people:\n",
-    "    if person['pet'] == 'Cat' and person['age'] < 28:\n",
+    "    if person['age'] < 28 and person['pet'] == 'Cat' :\n",
     "        cat_owners.append(person)\n",
     "        \n",
     "print(cat_owners)\n",
