--- a/index.ipynb
+++ b/index.ipynb
@@ -227,10 +227,9 @@
     "cat_owners = None\n",
     "\n",
     "for person in people:\n",
-    "    if person['age'] < 28 and person['pet'] == 'Cat' :\n",
+    "    if person['age'] < 28 and person['pet'] == \"Cat\":\n",
     "        cat_owners.append(person)\n",
-    "        \n",
-    "print(cat_owners)\n",
+    "cat_owners\n",
     "# for loop goes here"
    ]
   },
