--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    ],
    "source": [
     "# use a for loop to create a list of the cat owners who are under the age of 28\n",
-    "cat_owners = None\n",
+    "cat_owners = []\n",
     "\n",
     "for person in people:\n",
     "    if person['age'] < 28 and person['pet'] == \"Cat\":\n",
