Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,15 +207,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'name': 'Owen', 'age': 26, 'job': 'Sales person', 'pet': 'Cat', 'pet_name': 'Cosmo'}, {'name': 'Josh', 'age': 22, 'job': 'Student', 'pet': 'Cat', 'pet_name': 'Chat'}]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'name': 'Owen',\n",
+       "  'age': 26,\n",
+       "  'job': 'Sales person',\n",
+       "  'pet': 'Cat',\n",
+       "  'pet_name': 'Cosmo'},\n",
+       " {'name': 'Josh',\n",
+       "  'age': 22,\n",
+       "  'job': 'Student',\n",
+       "  'pet': 'Cat',\n",
+       "  'pet_name': 'Chat'}]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -226,7 +238,7 @@
     "    if person['age'] < 28 and person['pet'] == 'Cat' :\n",
     "        cat_owners.append(person)\n",
     "        \n",
-    "print(cat_owners)\n",
+    "cat_owners\n",
     "# for loop goes here"
    ]
   },
