--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,8 @@
     "list_of_odd_numbers_plus_ten = []\n",
     "for number in list_of_numbers:\n",
     "    if number % 2 != 0:\n",
-    "        number+10"
+    "        number += 10\n",
+    "        "
    ]
   },
   {
