--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
     "for number in list_of_numbers:\n",
     "    if number % 2 != 0:\n",
     "        number += 10\n",
-    "        "
+    "        list_of_odd_numbers_plus_ten.append"
    ]
   },
   {
