Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -285,7 +285,8 @@
     "        list_of_odd_numbers_plus_ten.append(number)\n",
     "        incr += 1\n",
     "        continue\n",
-    "    if incr ="
+    "    if incr = 10:\n",
+    "        p"
    ]
   },
   {
