Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
     "        incr += 1\n",
     "        continue\n",
     "    if incr = 10:\n",
-    "        p"
+    "        print(list_of_odd_numbers_plus_ten)"
    ]
   },
   {
