Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -268,9 +268,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-38-737ce8a3ac0b>, line 14)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-737ce8a3ac0b>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    elif incr = 10:\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# use a for loop to create a list of odd numbers from the list of numbers from 0 to 100\n",
     "# each time there is an odd number, add 10 to it and append it to the list_of_odd_numbers_plus_ten\n",
@@ -285,8 +294,9 @@
     "        list_of_odd_numbers_plus_ten.append(number)\n",
     "        incr += 1\n",
     "        continue\n",
-    "    if incr = 10:\n",
-    "        print(list_of_odd_numbers_plus_ten)"
+    "    elif incr = 10:\n",
+    "        print(list_of_odd_numbers_plus_ten)\n",
+    "        break"
    ]
   },
   {
